align fix, add framework desctops css fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -196,8 +196,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 150px;
-            margin-bottom: 100px;
+            gap: 170px;
         }
 
         .head-text {
@@ -274,7 +273,6 @@
         
         .text-container:nth-child(1){
         /* grid-area: 1 / 1 / 3 / 2; */
-        transform: translateY(75px);
         }
         
         .text-container:nth-child(1) ul{
@@ -290,23 +288,54 @@
         
         .text-container:nth-child(2) {
             /* grid-area: 1 / 2 / 2 / 3; */
-            transform: translateY(-75px);
         }
       
         
         .text-container:nth-child(3) {
             /* grid-area: 2 / 2 / 3 / 3; */
-            transform: translateY(75px);
         }
         
         .text-container:nth-child(4) {
             /* grid-area: 1 / 3 / 3 / 4; */
-            transform: translateY(-75px);
         }
 
         .text-container:nth-child(n+2) p{
 
             margin-top: 25%;
+        }
+
+        .email-container{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            font-family: 'Roboto', sans-serif;
+            color: #000;
+        }
+
+        .email-input {
+            border: 1px solid #406b82;
+            border-radius: 10px;
+            color: #406b82;
+            height: 25px;
+            width: 200px;
+            margin-top: 10px;
+        }
+
+        .email-submit{
+            background-color: #406b82;
+            border: none;
+            font-family: 'Roboto', sans-serif;
+            font-weight: 300;
+            font-size: 20px;
+            color: #ccc;
+            border-radius: 5px;
+            margin-top: 15px;
+            width: 50%;
+        }
+
+        .email-submit:hover{
+            background-color: #7fcffa;
+            color: #000;
         }
           
           .footer {
